--- a/index2.html
+++ b/index2.html
@@ -63,10 +63,10 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="thought.jpg" class="d-block w-100" style="height: 500px" width="10px" alt="...">
+      <img src="motivational speakers.jpg" class="d-block w-100" style="height: 500px" width="10px" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="White wall.jpg" class="d-block w-100" style="height: 800px" width="900px" alt="...">
+      <img src="entrepreneurs.jpg" class="d-block w-100" style="height: 800px" width="900px" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
@@ -77,3 +77,6 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>
+
+ 
